--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=spring-starter
+spring.datasource.url=jdbc:postgresql://localhost:5432/javane
+spring.datasource.username=postgres
+spring.datasource.password=Flower@1005
+server.port=6000
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.main.allow-circular-references=true
+
